Refactor Snackbar and TableButton for improved UX
- ✨ **Snackbar text updated to uppercase:** Made the Snackbar notification messages in `PwaUpdateAvailableMonitor.razor` more prominent by converting localized strings to uppercase using `.ToUpper()`.
- 🛠️ **Injected `StateContainer` in `TableButton`:** Added `StateContainer` service to enable responsive behavior based on shared state.
- 🔧 **Enhanced `_size` property logic in `TableButton`:** Adjusted `_size` to dynamically return `MudBlazor.Size.Large` for mobile devices when the action is `AddTicket`, improving mobile usability.

--- a/Gastos.Pwa/Components/Shared/Table/TableButton.razor
+++ b/Gastos.Pwa/Components/Shared/Table/TableButton.razor
@@ -1,5 +1,5 @@
 ﻿@inject LocalizationService Loc
-
+@inject StateContainer StateContainer
 
 <MudTooltip Text="@_tooltipText">
     <MudIconButton Icon="@_icon"
@@ -19,7 +19,17 @@
     [Parameter] public string? Class { get; set; }
     [Parameter] public bool Hidden { get; set; } = false;
 
-    private Size _size => Size ?? (Action == TableAction.Add ? MudBlazor.Size.Medium : MudBlazor.Size.Small);
+    private Size _size
+    {
+        get
+        {
+            if(StateContainer.IsMobile && Action == TableAction.AddTicket)
+            {
+                return MudBlazor.Size.Large;
+            }
+            return Size ?? (Action == TableAction.Add ? MudBlazor.Size.Medium : MudBlazor.Size.Small);
+        }
+    }
 
     private Color _color => Action switch
     {
