--- a/Gastos.Pwa/Components/Shared/Monitor/PwaUpdateAvailableMonitor.razor
+++ b/Gastos.Pwa/Components/Shared/Monitor/PwaUpdateAvailableMonitor.razor
@@ -36,7 +36,7 @@
     {
         Snackbar.Configuration.PositionClass = Defaults.Classes.Position.BottomCenter;
 
-        Snackbar.Add(new MarkupString($"<center><p class='p-0 m-0'>{Loc.Get(RS.PwaUpdateNewVersionAvailable)}.</p><p class='p-0 m-0'>{Loc.Get(RS.PwaUpdateClickToUpdate)}.</p></center>"),
+        Snackbar.Add(new MarkupString($"<center><p class='p-0 m-0'>{Loc.Get(RS.PwaUpdateNewVersionAvailable).ToUpper()}.</p><p class='p-0 m-0'>{Loc.Get(RS.PwaUpdateClickToUpdate).ToUpper()}.</p></center>"),
             Severity.Warning,
             config =>
             {
