--- a/Gastos.Pwa/Components/_Imports.razor
+++ b/Gastos.Pwa/Components/_Imports.razor
@@ -21,6 +21,7 @@
 @using DocIntel.Contracts.Responses.Common
 
 @using Gastos.Pwa
+@using Gastos.Pwa.Camera
 @using Gastos.Pwa.Components
 @using Gastos.Pwa.Components.Features.AnalysisJobs
 @using Gastos.Pwa.Components.Features.Products
