--- a/Gastos.Pwa/Components/Shared/Table/TablePagerContent.razor
+++ b/Gastos.Pwa/Components/Shared/Table/TablePagerContent.razor
@@ -9,7 +9,7 @@
                    AllItemsText="@Loc.Get(RS.TableAllItems)" />
 }
 
-<MudStack Row="true" Justify="Justify.Center" AlignItems="AlignItems.Baseline" Class="pb-1">
+<MudStack Row="true" Justify="Justify.Center" AlignItems="AlignItems.Baseline" Class="pb-1 mt-2">
     <MudSwitch T="bool"
                Label="@Loc.Get(RS.TableAllowRemove)"
                Value="@AllowRemoveValue" 
